# regulus

./: .gitignore  Cargo.toml
crates/regulus-app/: Cargo.toml
crates/regulus-app/src/: main.rs
crates/regulus-backend-windows/: Cargo.toml
crates/regulus-backend-windows/src/: lib.rs
crates/regulus-engine/: Cargo.toml
crates/regulus-engine/src/: budget.rs  engine.rs  lib.rs  poller.rs  profile.rs  reapply.rs  store.rs
crates/regulus-hal/: Cargo.toml
crates/regulus-hal/src/: capabilities.rs  lib.rs  mock.rs  traits.rs  types.rs
docs/superpowers/: hw-validation.md
docs/superpowers/plans/: 2026-06-15-regulus-m1.md
docs/superpowers/specs/: 2026-06-15-regulus-design.md
